tests/error/misc_errors/pattern_funcall_mismatch1.err
Error: Type mismatch (at $FILE:12:19)
   | 
10 | def main(p: Point, x: int) -> None:
11 |     match p:
12 |         case Point("_","2"):
   |                    ^^^ Expected pattern of type `int`, got `str`

Guppy compilation failed due to 1 previous error
